--- a/vr/style.css
+++ b/vr/style.css
@@ -2,10 +2,6 @@ body{
   background-color: #ffffff;
 }
 
-img {
-        width: 300px;
-        border: 1px solid black;
-}
 
 .topnav {
   overflow: hidden;
@@ -28,6 +24,8 @@ h1{
   font-family: 'Lucida Sans', 'Lucida Sans Regular';
   font-size:12px;
 }
+
+
 .content {
   background-color: #ffffff;
   padding: auto;
@@ -46,24 +44,18 @@ h1{
 }
 
 .content2{
-  background-image:url(images/bg.png);
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-position: center;
-  color:rgb(0, 0, 0);
-  font-family: 'Arial', 'Arial Regular';
-  height: 128px;
-  width:auto;
-  font-size: auto;
-  display: flex;
-  align-items: center; 
-
+  grid-row:2;
+  grid-column:2;
 }
 
 .content2 h2{
-  margin-left: 30px;
+  text-align: center;
+  font-size:82px;
   font-family:'Dancing script', cursive;
   font-weight: bold;
+  color:#dddddd;
+  margin: auto;
+  padding-top:10%;
 }
 
 
@@ -80,13 +72,23 @@ h1{
 
 .content1 {
   font-size: 18px;
-  background-color: #ffffff;
   padding: auto;
   height: auto; 
   margin:auto;
   font-family: "Open Sans",sans-serif;
   grid-column:2;
-  grid-row:2;
+  grid-row:4;
+}
+.content1 p{
+  color:#000000;
+  font-family: "Segoe UI",SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight:400;
+  line-height:1.3;
+}
+.content1 h3{
+  color:#000000;
+  font-family: "Segoe UI",SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 500;
 }
 
 table {
@@ -106,20 +108,23 @@ tr:nth-child(even) {
 }
 
 .container {
-  max-width: 600px;
-  min-width: 200px;
   margin-left:18%;
   padding-left: auto;
   font-family: Arial, sans-serif;
   display:grid;
   grid-template-columns:1fr 1fr 1fr;
-  grid-template-rows:1fr 1fr 1fr;
-  width: auto;
-  height: auto;
-  gap: 20px;
+  grid-template-rows:auto 230px auto auto auto auto auto;
+  row-gap: 30px;
+  column-gap: 15px;
   box-sizing:border-box;
   float:center;
 }
+.background{
+  background-image:url(images/vrback.png);
+  background-size:100% auto;
+  background-repeat:no-repeat;
+}
+
 
 .footer {
   background-color:  #3A2B3E;
@@ -128,10 +133,13 @@ tr:nth-child(even) {
   grid: auto;
 }
 .img1{
+  padding-top:20px;
+  padding:auto;
+  height:auto;
   grid-column:2;
-  grid-row:1;
+  grid-row:3;
 }
 .img2{
   grid-column:3;
-  grid-row:2;
+  grid-row:4;
 }
